@@ -3,26 +3,32 @@
 ;;  Copyright (c) 2005 Kahua.Org, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: proj.kahua,v 1.6 2006/09/08 14:50:24 cut-sea Exp $
+;; $Id: proj.kahua,v 1.7 2006/12/27 12:06:36 cut-sea Exp $
 ;;
 
 (load "%%_PROJECT_NAME_%%/version.kahua")
 
-
-(define (page title . body)
-  (html/ (title/ title)
-	 (body/ (h1/ title) (node-set body))))
-
+(define page-template
+  (kahua:make-xml-template
+   (kahua-template-path "%%_PROJECT_NAME_%%/page.xml")))
 
 (define-entry (version)
-  (page (format "Hello: version ~a" *%%_PROJECT_NAME_%%-version*)
-	(a/cont/ (@@/ (cont greeting))
-		 "greeting")))
+  (kahua:xml-template->sxml
+   page-template
+   :title (title/ (@/ (id "title"))
+		 "%%_PROJECT_NAME_%%")
+   :body (div/ (@/ (id "body"))
+	       (h1/ (format "Hello: version ~a" *%%_PROJECT_NAME_%%-version*))
+	       (a/cont/ (@@/ (cont greeting))
+			"greeting"))))
 
 (define-entry (greeting)
-  (page "Hello, Kahua!"
-	(a/cont/ (@@/ (cont version))
-		 "version")))
+  (kahua:xml-template->sxml
+   page-template
+   :body (div/ (@/ (id "body"))
+	       (h1/ "Hello, Kahua!")
+	       (a/cont/ (@@/ (cont version))
+			"version"))))
 
 ;
 ; initialization
