@@ -1,11 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
        "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-  <head id='head'>
-    <title>SAMPLE</title>
-    <meta http-equiv='content-type' content='text/html; charset=EUC-JP' />
+  <head>
+    <title id='title'>SAMPLE</title>
   </head>
-  <body id='body'>
-    <h1>Hello Kahua</h1>
+  <body>
+    <div id='body'>
+      <h1>Hello Kahua</h1>
+    </div>
   </body>
 </html>
